# fast-natord

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  cliff.toml  committed.toml  deny.toml  justfile  typos.toml
.cargo/: mutants.toml
.config/: nextest.toml
.github/: zizmor.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/actions/setup-windows/: action.yml
.github/workflows/: asan.yml  benchmarks.yml  ci.yml  codeql.yml  committed.yml  kani.yml  mark-stale.yml  miri.yml  release.yml  typos.yml  validate-pr-title.yml  zizmor.yml
benches/: compare.rs  natord.rs  normalizer.rs  valgrind.rs  valgrind_compare.rs  valgrind_normalizer.rs
examples/: profile_cdylib.rs  profile_me.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: compare.rs  compare_ignore_case.rs  compare_normalized.rs
src/: byte_utils.rs  collator.rs  compare.rs  compare_ignore_case.rs  compare_iter.rs  digit.rs  lib.rs  normalizer.rs  unicode.rs
src/byte_utils/: basic.rs  compare_word_at_a_time.rs  dispatch.rs  is_ascii.rs  kani.rs  mod.rs  skip_equal.rs  skip_while_digit.rs  tests.rs
src/compare/: kani.rs  mod.rs
src/compare_ignore_case/: kani.rs  mod.rs
src/normalizer/: enums.rs  mod.rs
src/unicode/: kani.rs  mod.rs  tests.rs
tests/: compare.rs  compare_ignore_case.rs  compare_iter.rs  integration_tests.rs  normalizer_tests.rs  proptests.proptest-regressions  proptests.rs
tests/common/: mod.rs
