[package]
name = "fast-natord"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
description = "Natural ordering for Rust"
readme = "README.md"
homepage = "https://github.com/MuntasirSZN/fast-natord"
repository = "https://github.com/MuntasirSZN/fast-natord"
license = "MIT"
keywords = ["natural", "order", "sort"]

[[bench]]
harness = false
name = "natord"

[dependencies]
cpufeatures = "0.3.0"
simd-normalizer = { version = "0.1", default-features = false, features = ["alloc"], optional = true }

[dev-dependencies]
divan = { version = "5", package = "codspeed-divan-compat" }
proptest = "1"

[features]
default = []
normalize = ["dep:simd-normalizer"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(kani)"] }

# IDE in windows won't work, CI fails with path too long, woraround
# until a solution is found.
[target.'cfg(kani_ra)'.dependencies]
kani = { git = "https://github.com/model-checking/kani" }
