[package]
name = "fast-natord"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
description = "Natural ordering for Rust"
readme = "README.md"
homepage = "https://github.com/MuntasirSZN/fast-natord"
repository = "https://github.com/MuntasirSZN/fast-natord"
license = "MIT"
keywords = ["natural", "order", "sort"]

[[bench]]
harness = false
name = "natord"

[dependencies]
simd-normalizer = { version = "0.1", default-features = false, features = ["alloc"], optional = true }

[target.'cfg(any(target_arch = "aarch64", target_arch = "x86_64"))'.dependencies]
cpufeatures = "0.3.0"

# IDE in windows won't work, CI fails with path too long, workaround
# until a solution is found.
[target."cfg(kani_ra)".dependencies]
kani = { git = "https://github.com/model-checking/kani" }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
divan = { package = "codspeed-divan-compat", version = "5" }
proptest = "1"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = []
normalize = ["dep:simd-normalizer"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(kani)"] }
