[package]
name = "fast-natord"
version = "0.2.1"
edition = "2024"
rust-version = "1.91"
description = "Natural ordering for Rust"
readme = "README.md"
homepage = "https://github.com/MuntasirSZN/fast-natord"
repository = "https://github.com/MuntasirSZN/fast-natord"
license = "MIT"
keywords = ["natural", "order", "sort"]

[[bench]]
harness = false
name = "compare"
path = "benches/compare.rs"

[[bench]]
harness = false
name = "normalizer"
path = "benches/normalizer.rs"

[[bench]]
harness = false
name = "valgrind_compare"
path = "benches/valgrind_compare.rs"

[[bench]]
harness = false
name = "valgrind_normalizer"
path = "benches/valgrind_normalizer.rs"

[dependencies]
simd-normalizer = { version = "0.1", default-features = false, features = ["alloc"], optional = true }

[target.'cfg(any(target_arch = "aarch64", target_arch = "x86_64"))'.dependencies]
cpufeatures = "0.3.0"

# IDE in windows won't work, CI fails with path too long, workaround
# until a solution is found.
[target."cfg(kani_ra)".dev-dependencies]
kani = { git = "https://github.com/model-checking/kani" }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
divan = { package = "codspeed-divan-compat", version = "5" }
proptest = "1"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = []
normalize = ["dep:simd-normalizer"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(kani)"] }

[profile.bench]
debug = true
strip = false

[dev-dependencies]
gungraun = { version = "0.19.4", features = ["cachegrind"] }
